--- a/app/src/main/res/layout/activity_file_clear_cache.xml
+++ b/app/src/main/res/layout/activity_file_clear_cache.xml
@@ -27,4 +27,17 @@
         android:id="@+id/tvCacheDir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/black" />
+
+    <TextView
+        android:id="@+id/tvCompressedImageCacheDir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
