--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FB7299</color>
-    <color name="colorPrimaryDark">#CCFB7299</color>
+    <color name="colorPrimary">#23ADE5</color>
+    <color name="colorPrimaryDark">#CC23ADE5</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="color_divider_gray">#918D8D</color>
@@ -11,8 +11,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
 
-    <color name="color_main_theme">#FB7299</color>
-    <color name="color_main_theme_dark">#CCFB7299</color>
+    <color name="color_main_theme">#23ADE5</color>
+    <color name="color_main_theme_dark">#CC23ADE5</color>
     <color name="color_font_black">#323232</color>
     <color name="color_font_gray">#A2A2A2</color>
 
