add placeholder;modify MultiImageActivity

--- a/app/src/main/res/layout/activity_select_single_image.xml
+++ b/app/src/main/res/layout/activity_select_single_image.xml
@@ -63,7 +63,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/ic_place_holder"
             android:visibility="visible"
             tools:visibility="visible" />
 
@@ -85,7 +85,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/ic_place_holder"
             android:visibility="visible"
             tools:visibility="visible" />
 
