--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
 
     <color name="color_container_bg">#F4F4F4</color>
     <color name="color_container_bg2">#FAFAFA</color>
+    <color name="color_container_bg3">#A2A2A2</color>
 </resources>
