--- a/app/src/main/res/layout/activity_file_operator.xml
+++ b/app/src/main/res/layout/activity_file_operator.xml
@@ -56,7 +56,7 @@
             android:visibility="gone" />
 
         <TextView
-            android:id="@+id/mTvResultError"
+            android:id="@+id/mTvError"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="错误信息"
