--- a/app/src/main/res/layout/activity_select_multi_image.xml
+++ b/app/src/main/res/layout/activity_select_multi_image.xml
@@ -1,115 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/dp_8"
+    android:paddingTop="@dimen/dp_3"
+    android:paddingRight="@dimen/dp_8"
+    android:paddingBottom="@dimen/dp_20">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_curr_strategy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:padding="3dp"
+        android:text="当前策略:"
+        android:textColor="@color/color_font_black"
+        android:textSize="@dimen/font_10"
+        android:textStyle="bold" />
+
+    <RadioGroup
+        android:id="@+id/rg_strategy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:padding="3dp"
-            android:text="文件大小超出后提供两种策略: "
-            android:textColor="@color/color_font_black"
-            android:textSize="@dimen/font_12"
-            android:textStyle="bold" />
-
-
-        <RadioGroup
-            android:id="@+id/rg_strategy"
+        <RadioButton
+            android:id="@+id/rb_strategy1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <RadioButton
-                android:id="@+id/rb_strategy1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/sel_strategy_change"
-                android:button="@null"
-                android:checked="true"
-                android:padding="8dp"
-                android:text="👉超过限制大小直接返回失败 \n OVER_SIZE_LIMIT_ALL_EXCEPT"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/font_12" />
-
-            <RadioButton
-                android:id="@+id/rb_strategy2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/sel_strategy_change"
-                android:button="@null"
-                android:padding="8dp"
-                android:text="👉超过限制大小去掉后面溢出的部分 \n OVER_SIZE_LIMIT_EXCEPT_OVERFLOW_PART"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/font_12" />
-
-        </RadioGroup>
-
-        <TextView
-            android:id="@+id/tv_curr_strategy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:padding="3dp"
-            android:layout_marginTop="@dimen/dp_8"
-            android:text="当前策略: "
-            android:textColor="@color/color_main_theme_dark"
-            android:textSize="@dimen/font_10"
-            android:textStyle="bold" />
-
-        <!--    并压缩    -->
-        <Button
-            android:id="@+id/bt_select_multi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_5"
-            android:text="选择多张图片"
+            android:background="@drawable/sel_strategy_change"
+            android:checked="true"
+            android:text="👉超过限制大小直接返回失败 \n OVER_SIZE_LIMIT_ALL_EXCEPT"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/font_13"
-            android:textStyle="bold" />
+            android:textSize="@dimen/font_11" />
 
-        <TextView
-            android:id="@+id/tv_error"
+        <RadioButton
+            android:id="@+id/rb_strategy2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="错误信息"
-            android:padding="3dp"
-            android:textColor="@android:color/holo_red_dark"
-            android:textColorHint="@color/color_font_black"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
+            android:layout_marginTop="5dp"
+            android:background="@drawable/sel_strategy_change"
+            android:text="👉超过限制大小去掉后面溢出的部分 \n OVER_SIZE_LIMIT_EXCEPT_OVERFLOW_PART"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/font_11" />
 
-        <TextView
-            android:id="@+id/tv_result"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:hint="选择结果"
-            android:padding="3dp"
-            android:textColor="@color/color_font_black"
-            android:textColorHint="@color/color_font_black"
-            android:textSize="12sp"
-            android:visibility="visible" />
+    </RadioGroup>
 
+    <Button
+        android:id="@+id/bt_select_multi"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginTop="@dimen/dp_3"
+        android:text="选择多张图片并压缩 (0)"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/font_11"
+        android:textStyle="bold" />
 
-        <!--        <androidx.recyclerview.widget.RecyclerView-->
-        <!--            android:id="@+id/recyclerView"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginTop="5dp"-->
-        <!--            android:overScrollMode="never"-->
-        <!--            android:padding="10dp"-->
-        <!--            android:scrollbars="vertical" />-->
+    <TextView
+        android:id="@+id/tv_error"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="错误信息"
+        android:padding="3dp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textColorHint="@color/color_font_black"
+        android:textSize="11sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
 
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+        android:background="@color/color_container_bg3" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_images"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:overScrollMode="always"
+        android:padding="5dp"
+        android:scrollbars="vertical" />
+
+</LinearLayout>
