数量限制优化

--- a/app/src/main/res/layout/activity_file_operator.xml
+++ b/app/src/main/res/layout/activity_file_operator.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:gravity="left|top"
             android:layout_height="wrap_content"
-            android:text="👉策略一: 超过限制大小返回失败 \n OVER_SIZE_LIMIT_ALL_EXCEPT"
+            android:text="👉策略一: 超过数量限制和大小限制返回失败 \n OVER_SIZE_LIMIT_ALL_EXCEPT"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_13"
             android:visibility="gone" />
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left|top"
-            android:text="👉策略二: 超过限制大小去掉后面溢出的部分 \n OVER_SIZE_LIMIT_EXCEPT_OVERFLOW_PART"
+            android:text="👉策略二: 超过数量限制和大小限制去掉后面溢出的部分 \n OVER_SIZE_LIMIT_EXCEPT_OVERFLOW_PART"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_13"
             android:visibility="gone" />
