--- a/sample_java/src/main/res/layout/activity_main.xml
+++ b/sample_java/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_place_holder" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -70,7 +70,7 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_place_holder" />
 
     </LinearLayout>
 </ScrollView>
