--- a/app/src/main/res/layout/activity_select_multi_files.xml
+++ b/app/src/main/res/layout/activity_select_multi_files.xml
@@ -15,7 +15,7 @@
         android:maxLines="2"
         android:padding="3dp"
         android:text="当前策略:"
-        android:textColor="@color/color_font_black"
+        android:textColor="@android:color/holo_red_dark"
         android:textSize="@dimen/font_10"
         android:textStyle="bold" />
 
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/sel_strategy_change"
             android:checked="true"
-            android:text="👉超过数量限制和大小限制直接返回失败 \n OVER_SIZE_LIMIT_ALL_EXCEPT"
+            android:text="👉超过数量限制和大小限制直接返回失败 \n OVER_LIMIT_EXCEPT_ALL"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_11" />
 
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:background="@drawable/sel_strategy_change"
-            android:text="👉超过数量限制和大小限制去掉后面溢出的部分 \n OVER_SIZE_LIMIT_EXCEPT_OVERFLOW_PART"
+            android:text="👉超过数量限制或大小限制\n 单一类型: 保留未超限制的文件并返回, 去掉后面溢出的部分; \n 多种类型: 保留正确的文件, 去掉错误类型的所有文件 \n OVER_LIMIT_EXCEPT_OVERFLOW"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_11" />
 
