--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:text="文件通用工具类(FileUtils)"
         android:textAllCaps="false"
         android:textSize="@dimen/font_12"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <View
         android:layout_width="match_parent"
